--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-router-dom": "^6.21.2",
+    "react-stacked-toast": "^0.0.6",
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
