--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hook-form": "^7.49.3",
     "react-router-dom": "^6.21.2",
     "react-stacked-toast": "^0.0.6",
+    "react-use": "^17.4.3",
     "tailwind-merge": "^2.2.0",
     "xlsx": "^0.18.5"
   },
